# Biosignal-Processing

./: .gitignore  README.md  Readme_Analysis.ipynb  data-sci-guide.ipynb
.github/ISSUE_TEMPLATE/: feature.md
datasets/: DelsysOffline.py  dataset_index.md  delsys_parsing.ipynb  emg-visual.ipynb  parser.ipynb
emg-analysis/: README.md  libemg.ipynb  naruto_emg.ipynb  pyproject.toml  refactored.py  simplified_emg.ipynb  spike_sorting.py  visual.py
emg-analysis/customlib/: __init__.py  data_structures.py  metadata.py  signal_processing.py  visualizations.py
emg-analysis/customlib/muap_extraction/: ckc.py  gradient_descent.py  ica.py  tensor_decomposition.py
emg-analysis/emg_analysis/: naruto_emg.ipynb  simplified_emg.ipynb  spike_sorting.py
utils/: MODULAR.mkd  modular.py  modularexamples.py  pydelsys.py  visual.py
