
[tool.poetry]
name = "emg-analysis"
version = "0.1.0"
description = ""
authors = ["rukasuamarike <lukeamlicke@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.5.1"
ipykernel = "^6.29.5"
pandas = "^2.2.2"
matplotlib = "^3.9.1"
scipy = "^1.14.0"
numpy = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
